# linux_notification_center

./: .gitignore  LICENSE  Makefile  README.org  Worklog.org  buildAndRun.sh  com.ph-uhl.deadd.notification.service.in  deadd-notification-center.cabal  deadd-notification-center.service.in  linux-notification-center.cabal  mysnapshot.yaml  notification.glade  notification1.glade  notification_center.glade  notification_in_center.glade  notification_section.glade  sendShowupNotis.sh  stack.yaml  style.css  updateyourconfig2021.org
.github/workflows/: main.yml  release.yml
.out/: deadd-notification-center.REMOVED.git-id
app/: Main.hs
docs/: linux-notification-center.man  linux-notification-center.org
pkg/: PKGBUILD
pkg-bin/: PKGBUILD
pkg-git/: PKGBUILD
snap/: snapcraft.yaml
src/: Config.hs  Helpers.hs  Lib.hs  NotificationCenter.hs  TransparentWindow.hs
src/NotificationCenter/: Button.hs  Glade.hs  Notification.hs  NotificationInCenter.hs  Notifications.hs
src/NotificationCenter/Notification/: Glade.hs
src/NotificationCenter/Notifications/: AbstractNotification.hs  Action.hs  Data.hs  Notification.hs  NotificationPopup.hs
src/NotificationCenter/Notifications/Notification/: Glade.hs
translation/: bn_BD.po  de.po  deadd-notification-center.pot  en.po  ru.po  tr.po
translation/bn_BD/LC_MESSAGES/: deadd-notification-center.mo
translation/de/LC_MESSAGES/: deadd-notification-center.mo
translation/en/LC_MESSAGES/: deadd-notification-center.mo
translation/ru/LC_MESSAGES/: deadd-notification-center.mo
translation/tr/LC_MESSAGES/: deadd-notification-center.mo
