name:                linux-notification-center
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/phuhl/linux-notification-center#readme
license:             BSD3
license-file:        LICENSE
author:              Philipp Uhl
maintainer:          example@example.com
copyright:           2017 Philipp Uhl
category:            Web
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     NotificationCenter
                     , NotificationCenter.Notifications
                     , NotificationCenter.Notifications.Notification
                     , NotificationCenter.Notifications.Notification.Glade
                     , NotificationCenter.Glade
                     , TransparentWindow
  build-depends:       base >= 4.7 && < 5
                     , gtk3             >= 0.14.2
                     , transformers
                     , cairo
                     , haskell-gi
                     , haskell-gi-base
                     , gi-cairo
                     , gi-glib
                     , gi-gdk
                     , gi-gdkpixbuf
                     , gi-gtk >= 3.0.12
                     , time
                     , system-locale
                     , gi-gobject
                     , text
                     , dbus
                     , containers
                     , unix
                     , stm
                     , here
                     , hdaemonize
  default-language:    Haskell2010

executable linux-notification-center
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , linux-notification-center
  default-language:    Haskell2010

test-suite linux-notification-center-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , linux-notification-center
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/phuhl/linux-notification-center
