name:                linux-notification-center
version:             1.6.0
-- synopsis:
-- description:
homepage:            https://github.com/phuhl/linux-notification-center#readme
license:             BSD3
license-file:        LICENSE
author:              Philipp Uhl
maintainer:          git@ph-uhl.com
copyright:           2017 Philipp Uhl
category:            Web
build-type:          Simple
extra-source-files:  README.org
                   , notification_center.glade
                   , notification.glade
                   , notification_in_center.glade
                   , style.css
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     NotificationCenter
                     , Config
                     , NotificationCenter.NotificationInCenter
                     , NotificationCenter.Button
                     , NotificationCenter.Notification.Glade
                     , NotificationCenter.Notifications
                     , NotificationCenter.Notifications.Data
                     , NotificationCenter.Notifications.Action
                     , NotificationCenter.Notifications.AbstractNotification
                     , NotificationCenter.Notifications.NotificationPopup
                     , NotificationCenter.Notifications.Notification.Glade
                     , NotificationCenter.Glade
                     , TransparentWindow
                     , Helpers
  build-depends:       base >= 4.7 && < 5
                     , regex-tdfa
                     , gtk3 >= 0.15.4
                     , transformers
                     , cairo
                     , haskell-gi
                     , haskell-gi-base
                     , gi-cairo
                     , gi-pango
                     , gi-glib >= 2.0.17
                     , gi-gdk
                     , gi-gdkpixbuf
                     , gi-gtk >= 3.0.19
                     , gi-gio
                     , time
                     , system-locale
                     , gi-gobject
                     , text
                     , bytestring
                     , ConfigFile
                     , mtl
                     , dbus >= 0.10.15 && < 1
                     , containers
                     , unix
                     , stm >= 2.5.0.0
                     , here
                     , hdaemonize
                     , directory
                     , process
                     , tuple
                     , split
                     , setlocale
                     , hgettext >= 0.1.5
                     , lens
  default-language:    Haskell2010

executable deadd-notification-center
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , linux-notification-center
  default-language:    Haskell2010

test-suite linux-notification-center-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , linux-notification-center
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/phuhl/linux-notification-center
